[gd_scene load_steps=3 format=3 uid="uid://cyo8m2h5bwxje"]

[ext_resource type="Script" uid="uid://db2vxl4k5n8gm" path="res://GUI/MiniGames/affine_cipher_game.gd" id="1"]
[ext_resource type="FontFile" uid="uid://c8fgo04h80ehc" path="res://GUI/Font/PressStart2P-Regular.ttf" id="2"]

[node name="AffineCipherGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 8
text = "Affine Cipher Puzzle"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 4
text = "Decrypt the message using the
shift values from the note"
horizontal_alignment = 1

[node name="EncryptedLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 6
text = "Encrypted: HWHHAPWNO"
horizontal_alignment = 1

[node name="FormulaLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 1, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 4
text = "D(x) = a^(-1) * (x - b) mod 26
where a = 5, b = 3"
horizontal_alignment = 1

[node name="InputContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="InputLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 5
text = "Answer:"

[node name="AnswerInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/InputContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 5
placeholder_text = "Enter decrypted text"
alignment = 1
max_length = 40

[node name="SubmitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 5
text = "Submit"

[node name="FeedbackLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 4
horizontal_alignment = 1

[node name="AttemptsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 3
text = "Attempts remaining: 3"
horizontal_alignment = 1

[node name="CloseLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 3
text = "[ESC] to close"
horizontal_alignment = 2

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="CenterPanel" type="Panel" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel/CenterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/CenterPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 10
text = "GAME OVER"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="GameOverPanel/CenterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 6
text = "You've run out of
attempts!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/CenterPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 6
text = "Restart Game"

[node name="MainMenuButton" type="Button" parent="GameOverPanel/CenterPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 6
text = "Main Menu"
